test/simple/ill-typed/flow_sensitive.caprice
(* TEST
  include refutable;
*)


let f (x : int | x > 0) : { a : int | a < 0 } = 
  x * -1

let g (x : int) : { a : int | a < 0 } = 
  if (x > 0) then f x else f 0 (* ERROR: returns 0 if x is 0 *)
